Store all images into a folder and switched up logic

--- a/index.html
+++ b/index.html
@@ -33,15 +33,21 @@
     <div class="photo-modal" id="photoModal">
         <div class="photo-modal-content">
             <div class="photo-slideshow">
-                <img src="CTP_Engagement_Katie&Richard-77.jpg" class="popup-photo active" id="photo1">
-                <img src="CTP_Engagement_Katie&Richard-101.jpg" class="popup-photo" id="photo2">
-                <img src="kr_cliffs.jpg" class="popup-photo" id="photo3">
+                <img src="images/CTP_Engagement_Katie&Richard-77.jpg" class="popup-photo active" id="photo1">
+                <img src="images/CTP_Engagement_Katie&Richard-101.jpg" class="popup-photo" id="photo2">
+                <img src="images/kr_cliffs.jpg" class="popup-photo" id="photo3">
+                <img src="images/cute_pears.png" class="popup-photo" id="photo4">
+                <img src="images/love_button.png" class="popup-photo" id="photo5">
+                <img src="images/weird_cat_love.png" class="popup-photo" id="photo6">
             </div>
             <p class="photo-caption">I love you SO MUCH Katie Yoo 🥰! "I love you because the entire universe conspired to help me find you." - Paulo Coelho 💋💕</p>
             <div class="photo-dots">
                 <span class="dot active" onclick="showPhoto(0)"></span>
                 <span class="dot" onclick="showPhoto(1)"></span>
                 <span class="dot" onclick="showPhoto(2)"></span>
+                <span class="dot" onclick="showPhoto(3)"></span>
+                <span class="dot" onclick="showPhoto(4)"></span>
+                <span class="dot" onclick="showPhoto(5)"></span>
             </div>
         </div>
     </div>
